deploy/kustomize/control-plane/base/cno-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    fluxcd.io/automated: 'true'
  labels:
    run: cno-api
  name: cno-api
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: cno-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp:
      labels:
        run: cno-api
    spec:
      containers:
      - image: beopenit/cno-api:1.0.0-rc
        imagePullPolicy: Always
        name: cno-api
        ports:
        - containerPort: 8081
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: kafkaca
          mountPath: "/.key/ca"
          readOnly: true
        - name: kafkaclientcred
          mountPath: "/.key/user"
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      serviceAccountName: cno-api
      volumes:
      - name: kafkaca
        secret:
          secretName: cno-kafka-cluster-cluster-ca-cert
      - name: kafkaclientcred
        secret:
          secretName: cno-kafka-superadmin
