deploy/kustomize/control-plane/base/cno-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cno-api
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    run: cno-api
  sessionAffinity: None
  type: ClusterIP
