deploy/kustomize/control-plane/base/cno-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: cno-api
  name: cno-api
spec:
  rules:
  - host: cno-api.$(DOMAIN)
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: cno-api
            port:
              number: 80
